--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -311,20 +311,20 @@
       "unumpay_charges": "يونم باي رسوم",
       "configure": "تكوين",
       "select_provider": "يرجى اختيار مزود خدمة الدفع",
-      "return_url":" رابط العودة",
-      "listner_url":" رابط المستمع",
-      "response_url":" رابط الاستجابة",
-      "response_abl":" رابط الاستجابة (ايه بي ال)",
-      "response_assan_pay":" رابط الاستجابة (Assan Pay)",
-      "select_all":"تحديد الكل",
-      "deselect_all":"إلغاء تحديد الكل",
-      "callback_return_url":" رابط الاستدعاء/العودة"
+      "return_url": " رابط العودة",
+      "listner_url": " رابط المستمع",
+      "response_url": " رابط الاستجابة",
+      "response_abl": " رابط الاستجابة (ايه بي ال)",
+      "response_assan_pay": " رابط الاستجابة (Assan Pay)",
+      "select_all": "تحديد الكل",
+      "deselect_all": "إلغاء تحديد الكل",
+      "callback_return_url": " رابط الاستدعاء/العودة"
     },
     "form": {
       "client_name": "اسم العميل",
       "client_name_required": "اسم العميل مطلوب",
-      "client_id":" معرّف العميل",
-      "client_id_required":" معرّف العميل مطلوب",
+      "client_id": " معرّف العميل",
+      "client_id_required": " معرّف العميل مطلوب",
       "merchant_id": "معرّف التاجر",
       "merchant_id_required": "معرّف التاجر مطلوب",
       "store_id": "معرّف المتجر",
@@ -362,7 +362,7 @@
       "merchant_hash_required": "تجزئة التاجر مطلوبة",
       "hide_for_special_countries": "إخفاء للدول الخاصة (رموز الدول مفصولة بفواصل)",
       "hide_for_special_countries_required": "إخفاء للدول الخاصة مطلوب",
-      "select_country_code":" اختر رمز البلد",
+      "select_country_code": " اختر رمز البلد",
       "currency_conversion": "تحويل العملة",
       "switch_currency": "تبديل العملة",
       "switch_merchant_store_currency": "تبديل عملة متجر التاجر",
@@ -392,129 +392,130 @@
       "email_address": "عنوان البريد الإلكتروني",
       "email_address_required": "عنوان البريد الإلكتروني مطلوب",
       "email_address_invalid": "عنوان البريد الإلكتروني غير صالح",
-      "account_number":"رقم الحساب",
-      "account_number_required":"رقم الحساب مطلوب",
-      "sub_account_number":"رقم الحساب الفرعي",
-      "sub_account_number_required":"رقم الحساب الفرعي مطلوب",
-      "flexform_id":"معرّف FlexForm",
-      "flexform_id_required":"معرّف FlexForm مطلوب",
-      "saly_key":"مفتاح Saly",
-      "saly_key_required":"مفتاح Saly مطلوب",
-      "api_key":"مفتاح API",
-      "api_key_required":"مفتاح API مطلوب",
-      "processing_channel_id" :"معرّف قناة المعالجة",
-      "processing_channel_id_required":"معرّف قناة المعالجة مطلوب",
-      "username":" اسم المستخدم",
-      "username_required":"اسم المستخدم مطلوب",
-      "password":"كلمة المرور",
-      "password_required":"كلمة المرور مطلوبة",
-      "certificate_file_name":"اسم ملف الشهادة",
-      "certificate_file_name_required":"اسم ملف الشهادة مطلوب",
-      "key_file_name":"اسم ملف المفتاح",
-      "key_file_name_required":"اسم ملف المفتاح مطلوب",
-      "hash_key":"مفتاح التجزئة",
-      "hash_key_required":"مفتاح التجزئة مطلوب",
-      "public_key":" المفتاح العام",
-      "public_key_required":"المفتاح العام مطلوب",
-      "encryption_key":"مفتاح التشفير",
-      "encryption_key_required":"مفتاح التشفير مطلوب",
-      "client_email":"البريد الإلكتروني للعميل",
-      "client_email_required":"البريد الإلكتروني للعميل مطلوب",
-      "client_phone":"رقم هاتف العميل",
-      "client_phone_required":"رقم هاتف العميل مطلوب",
-      "client_phone_invalid":"رقم هاتف العميل غير صالح",
-      "access_key":"مفتاح الوصول",
-      "access_key_required":"مفتاح الوصول مطلوب",
-      "profile_id":"معرّف الملف الشخصي",
-      "profile_id_required":"معرّف الملف الشخصي مطلوب",
-      "merchant_define_data3":"بيانات تعريف التاجر 3",
-      "merchant_define_data3_required":"بيانات تعريف التاجر 3 مطلوبة",
-      "multi_currency":"متعدد العملات",
-      "dual_currency":"عملة مزدوجة",
-      "dual_currency_required":"عملة مزدوجة مطلوبة",
-      "client_user_id":"معرّف مستخدم العميل",
-      "client_user_id_required":"معرّف مستخدم العميل مطلوب",
-      "client_password":"كلمة مرور العميل",
-      "client_password_required":"كلمة مرور العميل مطلوبة",
-      "private_key":"المفتاح الخاص",
-      "private_key_required":"المفتاح الخاص مطلوب",
-      "key_id":"معرّف المفتاح",
-      "key_id_required":"معرّف المفتاح مطلوب",
-      "shared_secret":"المفتاح المشترك",
-      "shared_secret_required":"المفتاح المشترك مطلوب",
-      "payment_type":"نوع الدفع",
-      "payment_type_required":"نوع الدفع مطلوب",
-      "card_network":"شبكة البطاقة",
-      "card_network_required":"شبكة البطاقة مطلوبة",
-      "x_api_key":"مفتاح X API",
-      "x_api_key_required":"مفتاح X API مطلوب",
-      "client_secret":"سر العميل",
-      "client_secret_required":"سر العميل مطلوب",
-      "database_name":"اسم قاعدة البيانات",
-      "database_name_required":"اسم قاعدة البيانات مطلوب",
-      "payment_provider_id":"معرّف مزود الدفع",
-      "payment_provider_id_required":"معرّف مزود الدفع مطلوب",
-      "payment_service_id":"معرّف خدمة الدفع",
-      "payment_service_id_required":"معرّف خدمة الدفع مطلوب",
-      "client_secret_key":"مفتاح سر العميل",
-      "client_secret_key_required":"مفتاح سر العميل مطلوب",
-      "integrity_salt":"تكامل الملح",
-      "integrity_salt_required":"تكامل الملح مطلوب",
-      "url_endpoint":"نقطة نهاية URL",
-      "url_endpoint_required":"نقطة نهاية URL مطلوبة",
-      "publishable_key":"مفتاح قابل للنشر",
-      "publishable_key_required":"مفتاح قابل للنشر مطلوب",
-      "partner_id":" معرّف الشريك",
-      "partner_id_required":"معرّف الشريك مطلوب",
-      "authorization_token":"رمز التفويض",
-      "authorization_token_required":"رمز التفويض مطلوب",
-      "outlet_reference":"مرجع المنفذ",
-      "outlet_reference_required":"مرجع المنفذ مطلوب",
-      "sub_merchant_id":"معرّف التاجر الفرعي",
-      "sub_merchant_id_required":"معرّف التاجر الفرعي مطلوب",
-      "merchant_version":"إصدار التاجر",
-      "merchant_version_required":"إصدار التاجر مطلوب",
-      "secured_key":"مفتاح SECURED",
-      "secured_key_required":"مفتاح SECURED مطلوب",
-      "HMAC":"HMAC",
-      "HMAC_required":"HMAC مطلوب",
-      "integration_id":"معرّف التكامل",
-      "integration_id_required":"معرّف التكامل مطلوب",
-      "iframe_link":"رابط iFrame",
-      "iframe_link_required":"رابط iFrame مطلوب",
-      "recurring_integration_id":"معرّف التكامل المتكرر",
-      "recurring_integration_id_required":"معرّف التكامل المتكرر مطلوب",
-      "instalment_plan":"خطة التقسيط",
-      "instalment_plan_required":"خطة التقسيط مطلوبة",
-      "instalment":"التقسيط",
-      "no_of_installment":"عدد الأقساط",
-      "no_of_installment_required":"عدد الأقساط مطلوب",
-      "server_key":"مفتاح الخادم",
-      "server_key_required":"مفتاح الخادم مطلوب",
-      "client_key":"مفتاح العميل",
-      "client_key_required":"مفتاح العميل مطلوب",
-      "app_key":"مفتاح التطبيق",
-      "app_key_required":"مفتاح التطبيق مطلوب",
-      "sid":"SID",
-      "sid_required":"SID مطلوب",
-      "sandbox_api_key":"مفتاح Sandbox API",
-      "sandbox_api_key_required":"مفتاح Sandbox API مطلوب",
-      "sandbox_secret_key":"مفتاح Sandbox Secret",
-      "sandbox_secret_key_required":"مفتاح Sandbox Secret مطلوب",
-      "production_secret_key":"مفتاح Production Secret",
-      "production_secret_key_required":"مفتاح Production Secret مطلوب",
-      "production_api_key":"مفتاح Production API",
-      "production_api_key_required":"مفتاح Production API مطلوب",
-      "publication_key":"مفتاح النشر",
-      "publication_key_required":"مفتاح النشر مطلوب",
-      "customer_data":"بيانات العميل",
-      "customer_data_required":"بيانات العميل مطلوبة",
-      "terminal_information":"معلومات الطرف الطرفي",
-      "terminal_information_required":"معلومات الطرف الطرفي مطلوبة",
-      "terminal_name":"اسم الطرف الطرفي",
-      "terminal_name_required":"اسم الطرف الطرفي مطلوب",
-      "store_name":"اسم المتجر",
-      "store_name_required":"اسم المتجر مطلوب"
+      "account_number": "رقم الحساب",
+      "account_number_required": "رقم الحساب مطلوب",
+      "sub_account_number": "رقم الحساب الفرعي",
+      "sub_account_number_required": "رقم الحساب الفرعي مطلوب",
+      "flexform_id": "معرّف FlexForm",
+      "flexform_id_required": "معرّف FlexForm مطلوب",
+      "saly_key": "مفتاح Saly",
+      "saly_key_required": "مفتاح Saly مطلوب",
+      "api_key": "مفتاح API",
+      "api_key_required": "مفتاح API مطلوب",
+      "processing_channel_id": "معرّف قناة المعالجة",
+      "processing_channel_id_required": "معرّف قناة المعالجة مطلوب",
+      "username": " اسم المستخدم",
+      "username_required": "اسم المستخدم مطلوب",
+      "password": "كلمة المرور",
+      "password_required": "كلمة المرور مطلوبة",
+      "certificate_file_name": "اسم ملف الشهادة",
+      "certificate_file_name_required": "اسم ملف الشهادة مطلوب",
+      "key_file_name": "اسم ملف المفتاح",
+      "key_file_name_required": "اسم ملف المفتاح مطلوب",
+      "hash_key": "مفتاح التجزئة",
+      "hash_key_required": "مفتاح التجزئة مطلوب",
+      "public_key": " المفتاح العام",
+      "public_key_required": "المفتاح العام مطلوب",
+      "encryption_key": "مفتاح التشفير",
+      "encryption_key_required": "مفتاح التشفير مطلوب",
+      "client_email": "البريد الإلكتروني للعميل",
+      "client_email_required": "البريد الإلكتروني للعميل مطلوب",
+      "client_phone": "رقم هاتف العميل",
+      "client_phone_required": "رقم هاتف العميل مطلوب",
+      "client_phone_invalid": "رقم هاتف العميل غير صالح",
+      "access_key": "مفتاح الوصول",
+      "access_key_required": "مفتاح الوصول مطلوب",
+      "profile_id": "معرّف الملف الشخصي",
+      "profile_id_required": "معرّف الملف الشخصي مطلوب",
+      "merchant_define_data3": "بيانات تعريف التاجر 3",
+      "merchant_define_data3_required": "بيانات تعريف التاجر 3 مطلوبة",
+      "multi_currency": "متعدد العملات",
+      "dual_currency": "عملة مزدوجة",
+      "dual_currency_required": "عملة مزدوجة مطلوبة",
+      "client_user_id": "معرّف مستخدم العميل",
+      "client_user_id_required": "معرّف مستخدم العميل مطلوب",
+      "client_password": "كلمة مرور العميل",
+      "client_password_required": "كلمة مرور العميل مطلوبة",
+      "private_key": "المفتاح الخاص",
+      "private_key_required": "المفتاح الخاص مطلوب",
+      "key_id": "معرّف المفتاح",
+      "key_id_required": "معرّف المفتاح مطلوب",
+      "shared_secret": "المفتاح المشترك",
+      "shared_secret_required": "المفتاح المشترك مطلوب",
+      "payment_type": "نوع الدفع",
+      "payment_type_required": "نوع الدفع مطلوب",
+      "card_network": "شبكة البطاقة",
+      "card_network_required": "شبكة البطاقة مطلوبة",
+      "x_api_key": "مفتاح X API",
+      "x_api_key_required": "مفتاح X API مطلوب",
+      "client_secret": "سر العميل",
+      "client_secret_required": "سر العميل مطلوب",
+      "database_name": "اسم قاعدة البيانات",
+      "database_name_required": "اسم قاعدة البيانات مطلوب",
+      "payment_provider_id": "معرّف مزود الدفع",
+      "payment_provider_id_required": "معرّف مزود الدفع مطلوب",
+      "payment_service_id": "معرّف خدمة الدفع",
+      "payment_service_id_required": "معرّف خدمة الدفع مطلوب",
+      "client_secret_key": "مفتاح سر العميل",
+      "client_secret_key_required": "مفتاح سر العميل مطلوب",
+      "integrity_salt": "تكامل الملح",
+      "integrity_salt_required": "تكامل الملح مطلوب",
+      "url_endpoint": "نقطة نهاية URL",
+      "url_endpoint_required": "نقطة نهاية URL مطلوبة",
+      "publishable_key": "مفتاح قابل للنشر",
+      "publishable_key_required": "مفتاح قابل للنشر مطلوب",
+      "partner_id": " معرّف الشريك",
+      "partner_id_required": "معرّف الشريك مطلوب",
+      "authorization_token": "رمز التفويض",
+      "authorization_token_required": "رمز التفويض مطلوب",
+      "outlet_reference": "مرجع المنفذ",
+      "outlet_reference_required": "مرجع المنفذ مطلوب",
+      "sub_merchant_id": "معرّف التاجر الفرعي",
+      "sub_merchant_id_required": "معرّف التاجر الفرعي مطلوب",
+      "merchant_version": "إصدار التاجر",
+      "merchant_version_required": "إصدار التاجر مطلوب",
+      "secured_key": "مفتاح SECURED",
+      "secured_key_required": "مفتاح SECURED مطلوب",
+      "HMAC": "HMAC",
+      "HMAC_required": "HMAC مطلوب",
+      "integration_id": "معرّف التكامل",
+      "integration_id_required": "معرّف التكامل مطلوب",
+      "iframe_link": "رابط iFrame",
+      "iframe_link_required": "رابط iFrame مطلوب",
+      "recurring_integration_id": "معرّف التكامل المتكرر",
+      "recurring_integration_id_required": "معرّف التكامل المتكرر مطلوب",
+      "instalment_plan": "خطة التقسيط",
+      "instalment_plan_required": "خطة التقسيط مطلوبة",
+      "instalment": "التقسيط",
+      "no_of_installment": "عدد الأقساط",
+      "no_of_installment_required": "عدد الأقساط مطلوب",
+      "server_key": "مفتاح الخادم",
+      "server_key_required": "مفتاح الخادم مطلوب",
+      "client_key": "مفتاح العميل",
+      "client_key_required": "مفتاح العميل مطلوب",
+      "app_key": "مفتاح التطبيق",
+      "app_key_required": "مفتاح التطبيق مطلوب",
+      "sid": "SID",
+      "sid_required": "SID مطلوب",
+      "sandbox_api_key": "مفتاح Sandbox API",
+      "sandbox_api_key_required": "مفتاح Sandbox API مطلوب",
+      "sandbox_secret_key": "مفتاح Sandbox Secret",
+      "sandbox_secret_key_required": "مفتاح Sandbox Secret مطلوب",
+      "production_secret_key": "مفتاح Production Secret",
+      "production_secret_key_required": "مفتاح Production Secret مطلوب",
+      "production_api_key": "مفتاح Production API",
+      "production_api_key_required": "مفتاح Production API مطلوب",
+      "publication_key": "مفتاح النشر",
+      "publication_key_required": "مفتاح النشر مطلوب",
+      "customer_data": "بيانات العميل",
+      "customer_data_required": "بيانات العميل مطلوبة",
+      "terminal_information": "معلومات الطرف الطرفي",
+      "terminal_information_required": "معلومات الطرف الطرفي مطلوبة",
+      "terminal_name": "اسم الطرف الطرفي",
+      "terminal_name_required": "اسم الطرف الطرفي مطلوب",
+      "store_name": "اسم المتجر",
+      "store_name_required": "اسم المتجر مطلوب",
+      "access_token":" رمز الوصول"
     }
   },
   "payment-providers_snackbar": {
@@ -555,13 +556,33 @@
     "paystack_settings_saved": "تم حفظ إعدادات PAYSTACK بنجاح",
     "rapyd_settings_saved": "تم حفظ إعدادات Rapyd بنجاح",
     "tabpay_settings_saved": "تم حفظ إعدادات TabPay بنجاح",
-    "paytab_settings_saved":"تم حفظ إعدادات PAYTAB بنجاح",
+    "paytab_settings_saved": "تم حفظ إعدادات PAYTAB بنجاح",
     "tbc_settings_saved": "تم حفظ إعدادات TBC بنجاح",
     "swich_settings_saved": "تم حفظ إعدادات SWICH بنجاح",
-    "walee_settings_saved":"تم حفظ إعدادات Walee بنجاح",
-    "safepay_settings_saved":"تم حفظ إعدادات Safepay بنجاح",
+    "walee_settings_saved": "تم حفظ إعدادات Walee بنجاح",
+    "safepay_settings_saved": "تم حفظ إعدادات Safepay بنجاح",
     "stripe_settings_saved": "تم حفظ إعدادات Stripe بنجاح",
     "ubl_settings_saved": "تم حفظ إعدادات UBL بنجاح"
+  },
+  "setting_page": {
+    "text": {
+      "contact_detail": "تفاصيل الاتصال",
+      "reconciliation_report_settings": "إعدادات تقرير التسوية",
+      "advanced_setting": "الإعدادات المتقدمة",
+      "full_name":"الاسم الكامل",
+      "field_required":"هذا الحقل مطلوب" ,
+      "email_must_be_valid":"يجب أن يكون البريد الإلكتروني صالحًا",
+      "job_title":"المسمى الوظيفي",
+      "email_address":"عنوان البريد الإلكتروني",
+      "contact_method":"طريقة الاتصال المفضلة",
+      "download_guide":"تحميل دليل التكوين"
+    },
+    "snackbar": {
+      "contact_saved_successfully":"تم حفظ تفاصيل الاتصال بنجاح",
+      "contact_data_loaded_successfully":"تم تحميل تفاصيل الاتصال بنجاح",
+      "reconciliation_data_loaded_successfully":"تم تحميل بيانات التسوية بنجاح",
+      "reconciliation_settings_saved_successfully":"تم حفظ إعدادات التسوية بنجاح"
+    }
   },
   "$vuetify": {
     "open": "فتح",
