--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -311,20 +311,20 @@
       "unumpay_charges": "Frais Unumpay",
       "configure": "Configurer",
       "select_provider": "Veuillez sélectionner un fournisseur de services de paiement",
-      "return_url":" URL de retour",
-      "listner_url":" URL de l'auditeur",
-      "response_url":" URL de réponse",
-      "response_abl":" URL de réponse (ABL)",
-      "response_assan_pay":" URL de réponse (Assan Pay)",
-      "select_all":"Tout sélectionner",
-      "deselect_all":"Tout désélectionner",
-      "callback_return_url":" URL de rappel/retour"
+      "return_url": " URL de retour",
+      "listner_url": " URL de l'auditeur",
+      "response_url": " URL de réponse",
+      "response_abl": " URL de réponse (ABL)",
+      "response_assan_pay": " URL de réponse (Assan Pay)",
+      "select_all": "Tout sélectionner",
+      "deselect_all": "Tout désélectionner",
+      "callback_return_url": " URL de rappel/retour"
     },
     "form": {
       "client_name": "Nom du client",
       "client_name_required": "Le nom du client est requis",
-      "client_id":" ID du client",
-      "client_id_required":" L'ID du client est requis",
+      "client_id": " ID du client",
+      "client_id_required": " L'ID du client est requis",
       "merchant_id": "ID du marchand",
       "merchant_id_required": "L'ID du marchand est requis",
       "store_id": "ID du magasin",
@@ -354,15 +354,15 @@
       "api_version": "Version API",
       "transaction_type": "Type de transaction",
       "transaction_type_required": "Le type de transaction est requis",
-      "transaction_key":" Clé de transaction",
-      "transaction_key_required":" La clé de transaction est requise",
+      "transaction_key": " Clé de transaction",
+      "transaction_key_required": " La clé de transaction est requise",
       "api_password": "Mot de passe API",
       "api_password_required": "Le mot de passe API est requis",
       "api_login_id": "ID de connexion API",
       "api_login_id_required": "L'ID de connexion API est requis",
       "hide_for_special_countries": "Masquer pour les pays spéciaux (codes pays séparés par des virgules)",
       "hide_for_special_countries_required": "Masquer pour les pays spéciaux est requis",
-      "select_country_code":" Sélectionner le code pays",
+      "select_country_code": " Sélectionner le code pays",
       "currency_conversion": "Conversion de devise",
       "switch_currency": "Changer de devise",
       "switch_merchant_store_currency": "Changer la devise du magasin du commerçant",
@@ -392,129 +392,130 @@
       "email_address": "Adresse électronique",
       "email_address_required": "L'adresse électronique est requise",
       "email_address_invalid": "L'adresse électronique est invalide",
-      "account_number":"Numéro de compte",
-      "account_number_required":"Le numéro de compte est requis",
-      "sub_account_number":"Numéro de compte secondaire",
-      "sub_account_number_required":"Le numéro de compte secondaire est requis",
-      "flexform_id":"ID FlexForm",
-      "flexform_id_required":"L'ID FlexForm est requis",
-      "saly_key":"Clé Saly",
-      "saly_key_required":"La clé Saly est requise",
-      "api_key":"Clé API",
-      "api_key_required":"La clé API est requise",
-      "processing_channel_id" :"ID du canal de traitement",
-      "processing_channel_id_required":"L'ID du canal de traitement est requis",
-      "username":" Nom d'utilisateur",
-      "username_required":" Le nom d'utilisateur est requis",
-      "password":"Mot de passe",
-      "password_required":" Le mot de passe est requis",
-      "certificate_file_name":"Nom du fichier de certificat",
-      "certificate_file_name_required":"Le nom du fichier de certificat est requis",
-      "key_file_name":"Nom du fichier de clé",
-      "key_file_name_required":"Le nom du fichier de clé est requis",
-      "hash_key":"Clé de hachage",
-      "hash_key_required":"La clé de hachage est requise",
-      "public_key":" Clé publique",
-      "public_key_required":"La clé publique est requise",
-      "encryption_key":"Clé de chiffrement",
-      "encryption_key_required":"La clé de chiffrement est requise",
-      "client_email":"Email du client",
-      "client_email_required":"L'email du client est requis",
-      "client_phone":"Téléphone du client",
-      "client_phone_required":"Le téléphone du client est requis",
-      "client_phone_invalid":"Le téléphone du client est invalide",
-      "access_key":"Clé d'accès",
-      "access_key_required":"La clé d'accès est requise",
-      "profile_id":"ID de profil",
-      "profile_id_required":"L'ID de profil est requis",
-      "merchant_define_data3":"Merchant Define Data3",
-      "merchant_define_data3_required":"Merchant Define Data3 est requis",
-      "multi_currency":"Multi-devises",
-      "dual_currency":"Double devise",
-      "dual_currency_required":"La double devise est requise",
-      "client_user_id":"ID utilisateur client",
-      "client_user_id_required":"L'ID utilisateur client est requis",
-      "client_password":"Mot de passe client",
-      "client_password_required":"Le mot de passe client est requis",
-      "private_key":"Clé privée",
-      "private_key_required":"La clé privée est requise",
-      "key_id":"ID de clé",
-      "key_id_required":"L'ID de clé est requis",
-      "shared_secret":"Secret partagé",
-      "shared_secret_required":"Le secret partagé est requis",
-      "payment_type":"Type de paiement",
-      "payment_type_required":"Le type de paiement est requis",
-      "card_network":"Réseau de carte",
-      "card_network_required":"Le réseau de carte est requis",
-      "x_api_key":"Clé X API",
-      "x_api_key_required":"La clé X API est requise",
-      "client_secret":"Client secret",
-      "client_secret_required":"Le secret client est requis",
-      "database_name":"Nom de la base de données",
-      "database_name_required":"Le nom de la base de données est requis",
-      "payment_provider_id":"ID du fournisseur de paiement",
-      "payment_provider_id_required":"L'ID du fournisseur de paiement est requis",
-      "payment_service_id":"ID du service de paiement",
-      "payment_service_id_required":"L'ID du service de paiement est requis",
-      "client_secret_key":"Clé secrète client",
-      "client_secret_key_required":"La clé secrète client est requise",
-      "integrity_salt":"Sel d'intégrité",
-      "integrity_salt_required":"Le sel d'intégrité est requis",
-      "url_endpoint":"Point de terminaison URL",
-      "url_endpoint_required":"Le point de terminaison URL est requis",
-      "publishable_key":"Clé publiable",
-      "publishable_key_required":"La clé publiable est requise",
-      "partner_id":"ID du partenaire",
-      "partner_id_required":"L'ID du partenaire est requis",
-      "authorization_token":"Jeton d'autorisation",
-      "authorization_token_required":"Le jeton d'autorisation est requis",
-      "outlet_reference":"Référence du point de vente",
-      "outlet_reference_required":"La référence du point de vente est requise",
-      "sub_merchant_id":"ID du sous-marchand",
-      "sub_merchant_id_required":"L'ID du sous-marchand est requis",
-      "merchant_version":"Version du marchand",
-      "merchant_version_required":"La version du marchand est requise",
-      "secured_key":"Clé SECURED",
-      "secured_key_required":"La clé SECURED est requise",
-      "HMAC":"HMAC",
-      "HMAC_required":"HMAC est requis",
-      "integration_id":"ID d'intégration",
-      "integration_id_required":"L'ID d'intégration est requis",
-      "iframe_link":"Lien iFrame",
-      "iframe_link_required":"Le lien iFrame est requis",
-      "recurring_integration_id":"ID d'intégration récurrente",
-      "recurring_integration_id_required":"L'ID d'intégration récurrente est requis",
-      "instalment_plan":"Plan de versements",
-      "instalment_plan_required":"Le plan de versements est requis",
-      "instalment":"versement",
-      "no_of_installment":"Nombre de versements",
-      "no_of_installment_required":"Le nombre de versements est requis",
-      "server_key":"Clé du serveur",
-      "server_key_required":"La clé du serveur est requise",
-      "client_key":"Clé client",
-      "client_key_required":"La clé client est requise",
-      "app_key":"Clé de l'application",
-      "app_key_required":"La clé de l'application est requise",
-      "sid":"SID",
-      "sid_required":"SID est requis",
-      "sandbox_api_key":"Clé API Sandbox",
-      "sandbox_api_key_required":"La clé API Sandbox est requise",
-      "sandbox_secret_key":"Clé secrète Sandbox",
-      "sandbox_secret_key_required":"La clé secrète Sandbox est requise",
-      "production_secret_key":"Clé secrète de production",
-      "production_secret_key_required":"La clé secrète de production est requise",
-      "production_api_key":"Clé API de production",
-      "production_api_key_required":"La clé API de production est requise",
-      "publication_key":"Clé de publication",
-      "publication_key_required":"La clé de publication est requise",
-      "customer_data":"Données client",
-      "customer_data_required":"Les données client sont requises",
-      "terminal_information":"Informations sur le terminal",
-      "terminal_information_required":"Les informations sur le terminal sont requises",
-      "terminal_name":"Nom du terminal",
-      "terminal_name_required":"Le nom du terminal est requis",
-      "store_name":"Nom du magasin",
-      "store_name_required":"Le nom du magasin est requis"
+      "account_number": "Numéro de compte",
+      "account_number_required": "Le numéro de compte est requis",
+      "sub_account_number": "Numéro de compte secondaire",
+      "sub_account_number_required": "Le numéro de compte secondaire est requis",
+      "flexform_id": "ID FlexForm",
+      "flexform_id_required": "L'ID FlexForm est requis",
+      "saly_key": "Clé Saly",
+      "saly_key_required": "La clé Saly est requise",
+      "api_key": "Clé API",
+      "api_key_required": "La clé API est requise",
+      "processing_channel_id": "ID du canal de traitement",
+      "processing_channel_id_required": "L'ID du canal de traitement est requis",
+      "username": " Nom d'utilisateur",
+      "username_required": " Le nom d'utilisateur est requis",
+      "password": "Mot de passe",
+      "password_required": " Le mot de passe est requis",
+      "certificate_file_name": "Nom du fichier de certificat",
+      "certificate_file_name_required": "Le nom du fichier de certificat est requis",
+      "key_file_name": "Nom du fichier de clé",
+      "key_file_name_required": "Le nom du fichier de clé est requis",
+      "hash_key": "Clé de hachage",
+      "hash_key_required": "La clé de hachage est requise",
+      "public_key": " Clé publique",
+      "public_key_required": "La clé publique est requise",
+      "encryption_key": "Clé de chiffrement",
+      "encryption_key_required": "La clé de chiffrement est requise",
+      "client_email": "Email du client",
+      "client_email_required": "L'email du client est requis",
+      "client_phone": "Téléphone du client",
+      "client_phone_required": "Le téléphone du client est requis",
+      "client_phone_invalid": "Le téléphone du client est invalide",
+      "access_key": "Clé d'accès",
+      "access_key_required": "La clé d'accès est requise",
+      "profile_id": "ID de profil",
+      "profile_id_required": "L'ID de profil est requis",
+      "merchant_define_data3": "Merchant Define Data3",
+      "merchant_define_data3_required": "Merchant Define Data3 est requis",
+      "multi_currency": "Multi-devises",
+      "dual_currency": "Double devise",
+      "dual_currency_required": "La double devise est requise",
+      "client_user_id": "ID utilisateur client",
+      "client_user_id_required": "L'ID utilisateur client est requis",
+      "client_password": "Mot de passe client",
+      "client_password_required": "Le mot de passe client est requis",
+      "private_key": "Clé privée",
+      "private_key_required": "La clé privée est requise",
+      "key_id": "ID de clé",
+      "key_id_required": "L'ID de clé est requis",
+      "shared_secret": "Secret partagé",
+      "shared_secret_required": "Le secret partagé est requis",
+      "payment_type": "Type de paiement",
+      "payment_type_required": "Le type de paiement est requis",
+      "card_network": "Réseau de carte",
+      "card_network_required": "Le réseau de carte est requis",
+      "x_api_key": "Clé X API",
+      "x_api_key_required": "La clé X API est requise",
+      "client_secret": "Client secret",
+      "client_secret_required": "Le secret client est requis",
+      "database_name": "Nom de la base de données",
+      "database_name_required": "Le nom de la base de données est requis",
+      "payment_provider_id": "ID du fournisseur de paiement",
+      "payment_provider_id_required": "L'ID du fournisseur de paiement est requis",
+      "payment_service_id": "ID du service de paiement",
+      "payment_service_id_required": "L'ID du service de paiement est requis",
+      "client_secret_key": "Clé secrète client",
+      "client_secret_key_required": "La clé secrète client est requise",
+      "integrity_salt": "Sel d'intégrité",
+      "integrity_salt_required": "Le sel d'intégrité est requis",
+      "url_endpoint": "Point de terminaison URL",
+      "url_endpoint_required": "Le point de terminaison URL est requis",
+      "publishable_key": "Clé publiable",
+      "publishable_key_required": "La clé publiable est requise",
+      "partner_id": "ID du partenaire",
+      "partner_id_required": "L'ID du partenaire est requis",
+      "authorization_token": "Jeton d'autorisation",
+      "authorization_token_required": "Le jeton d'autorisation est requis",
+      "outlet_reference": "Référence du point de vente",
+      "outlet_reference_required": "La référence du point de vente est requise",
+      "sub_merchant_id": "ID du sous-marchand",
+      "sub_merchant_id_required": "L'ID du sous-marchand est requis",
+      "merchant_version": "Version du marchand",
+      "merchant_version_required": "La version du marchand est requise",
+      "secured_key": "Clé SECURED",
+      "secured_key_required": "La clé SECURED est requise",
+      "HMAC": "HMAC",
+      "HMAC_required": "HMAC est requis",
+      "integration_id": "ID d'intégration",
+      "integration_id_required": "L'ID d'intégration est requis",
+      "iframe_link": "Lien iFrame",
+      "iframe_link_required": "Le lien iFrame est requis",
+      "recurring_integration_id": "ID d'intégration récurrente",
+      "recurring_integration_id_required": "L'ID d'intégration récurrente est requis",
+      "instalment_plan": "Plan de versements",
+      "instalment_plan_required": "Le plan de versements est requis",
+      "instalment": "versement",
+      "no_of_installment": "Nombre de versements",
+      "no_of_installment_required": "Le nombre de versements est requis",
+      "server_key": "Clé du serveur",
+      "server_key_required": "La clé du serveur est requise",
+      "client_key": "Clé client",
+      "client_key_required": "La clé client est requise",
+      "app_key": "Clé de l'application",
+      "app_key_required": "La clé de l'application est requise",
+      "sid": "SID",
+      "sid_required": "SID est requis",
+      "sandbox_api_key": "Clé API Sandbox",
+      "sandbox_api_key_required": "La clé API Sandbox est requise",
+      "sandbox_secret_key": "Clé secrète Sandbox",
+      "sandbox_secret_key_required": "La clé secrète Sandbox est requise",
+      "production_secret_key": "Clé secrète de production",
+      "production_secret_key_required": "La clé secrète de production est requise",
+      "production_api_key": "Clé API de production",
+      "production_api_key_required": "La clé API de production est requise",
+      "publication_key": "Clé de publication",
+      "publication_key_required": "La clé de publication est requise",
+      "customer_data": "Données client",
+      "customer_data_required": "Les données client sont requises",
+      "terminal_information": "Informations sur le terminal",
+      "terminal_information_required": "Les informations sur le terminal sont requises",
+      "terminal_name": "Nom du terminal",
+      "terminal_name_required": "Le nom du terminal est requis",
+      "store_name": "Nom du magasin",
+      "store_name_required": "Le nom du magasin est requis",
+      "access_token":" Jeton d'accès"
     }
   },
   "payment-providers_snackbar": {
@@ -555,13 +556,33 @@
     "paystack_settings_saved": "Paramètres PAYSTACK enregistrés avec succès",
     "rapyd_settings_saved": "Paramètres Rapyd enregistrés avec succès",
     "tabpay_settings_saved": "Paramètres TabPay enregistrés avec succès",
-    "paytab_settings_saved":"Paramètres PAYTAB enregistrés avec succès",
+    "paytab_settings_saved": "Paramètres PAYTAB enregistrés avec succès",
     "tbc_settings_saved": "Paramètres TBC enregistrés avec succès",
     "swich_settings_saved": "Paramètres SWICH enregistrés avec succès",
-    "walee_settings_saved":" Paramètres Walee enregistrés avec succès",
-    "safepay_settings_saved":"Paramètres Safepay enregistrés avec succès",
+    "walee_settings_saved": " Paramètres Walee enregistrés avec succès",
+    "safepay_settings_saved": "Paramètres Safepay enregistrés avec succès",
     "stripe_settings_saved": "Paramètres Stripe enregistrés avec succès",
     "ubl_settings_saved": "Paramètres UBL enregistrés avec succès"
+  },
+  "setting_page": {
+    "text": {
+      "contact_detail": "Détail du contact",
+      "reconciliation_report_settings": "Paramètres du rapport de réconciliation",
+      "advanced_setting": "Paramètres avancés",
+      "full_name":"Nom complet",
+      "field_required":"Ce champ est obligatoire",
+      "email_must_be_valid":"L'email doit être valide",
+      "job_title":"Intitulé du poste",
+      "email_address":"Adresse électronique",
+      "contact_method":"Méthode de contact préférée",
+      "download_guide":"Télécharger le guide de configuration"
+    },
+    "snackbar": {
+      "contact_saved_successfully":"Détails du contact enregistrés avec succès",
+      "contact_data_loaded_successfully":"Détails du contact chargés avec succès",
+      "reconciliation_data_loaded_successfully":"Données de réconciliation chargées avec succès",
+      "reconciliation_settings_saved_successfully":"Paramètres de réconciliation enregistrés avec succès"
+    }
   },
   "$vuetify": {
     "open": "Ouvrir",
